--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -2,3 +2,17 @@
     min-height: 90vh;
     background-image: linear-gradient(to right, #212529, #6c757d, #212529);
 }
+
+/* Scrollbar Styling */
+::-webkit-scrollbar {
+    width: 15px;
+}
+::-webkit-scrollbar-track {
+    background: #292b2c;
+}
+::-webkit-scrollbar-thumb {
+    background: #930000;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #c30000;
+}
